Fix tabs alignment in portrait

--- a/_sass/ui.scss
+++ b/_sass/ui.scss
@@ -71,3 +71,11 @@ $primary-button-color-hover: #332738;
     }
   }
 }
+
+.tab-content {
+  margin-top: 2rem;
+
+  .tab-content-item {
+    margin-bottom: 2rem;
+  }
+}
